--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^7.1.0-rc.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
